[metadata]
name = bdocker
version=0.0.1
summary = bdocker
license = Apache-2
description-file =
    README.md
author = LIP
author-email =  jorgesece@lip.pt
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    bdocker

[compile_catalog]
directory = bdocker/locale
domain = bdocker

[update_catalog]
domain = bdocker
output_dir = bdocker/locale
input_file = bdocker/locale/bdocker.pot


[entry_points]
console_scripts =
    bdocker = bdocker.client.cli:bdocker
